Tweaked build_flags to pick up monitor_speed

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,10 +12,10 @@
 platform = atmelavr
 board = uno
 framework = arduino
-;monitor_speed = 9600
+monitor_speed = 9600
 
 
-build_flags = -D MONITOR_SPEED=9600
+build_flags = -D MONITOR_SPEED=${env.monitor_speed}
 
 [env:debug]
 build_type = debug
@@ -27,7 +27,7 @@ lib_deps =
 
 
 [env:serial]
-build_flags =  ${env.build_flags} -D USE_SERIAL=1 -D USE_COUT=0 USE_DEBUGGER=0
+build_flags =  ${env.build_flags} -D USE_SERIAL=1 -D USE_COUT=0 -D USE_DEBUGGER=0
 
 [env:cout]
 build_flags =  ${env.build_flags} -D USE_SERIAL=0 -D USE_COUT=1 -D USE_DEBUGGER=0
